--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,39 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>מהמהמהמהמהממה יוקרו</title>
+    <title>Hello, world!</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
+          integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
-<body>
-    <h1>האתר המגניב של רון ועומר</h1>
-    <p>עוד מעט יהיה אפשר להעלות תמונות, בינתיים.. הינה חתול</p>
-    <form method=post enctype=multipart/form-data>
-      <p><input type=file name=file>
-        <input type=text name=pass>
-         <input type=submit value=Upload>
+<body style="text-align: center; margin-top: 150px;" >
+
+<h1>האתר המגניב של רון ועומר</h1>
+<p>כדי להעלות תמונה אל תשכחו לרשום את השם של הברנש שאתם הכי אוהבים בעולם</p>
+<div style="    text-align: center !important; font-size: 9px;
+    margin: auto;
+    display: inline-block;">
+    <form class="form-inline" method=post enctype=multipart/form-data>
+        <input class="col" id="fileUpload" type=file name=file>
+        <input class="col" name=pass>
+        <input class="col"type=submit value=Upload>
     </form>
+</div>
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
+        integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
+        integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
+        crossorigin="anonymous"></script>
 </body>
 </html>
