--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 </head>
 <body style="text-align: center; margin-top: 150px;" >
 
-<h1>האתר החצי מגניב של ועומר !</h1>
+<h1>האתר החצי מגניב של  רון ועומר !</h1>
 <p>כדי להעלות תמונה אל תשכחו לרשום את השם של הברנש שאתם הכי אוהבים בעולם</p>
 <div style="    text-align: center !important; font-size: 9px;
     margin: auto;
